--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 .App {
   display: flex;
   flex-wrap: wrap;
-  background-color: black;
+  background-color: #34282d ;
   width: 100%;
   min-height: 20vh;
   font-size: calc(7px + 2vmin);
