--- a/src/App.css
+++ b/src/App.css
@@ -5,10 +5,11 @@
   display: flex;
   flex-wrap: wrap;
   width: 100%;
-  min-height: 20vh;
+  height: 920px;
   font-size: calc(7px + 2vmin);
   color: white;
   margin: 50px;
+  background-color:rebeccapurple
 }
 
 .App-logo {
@@ -85,8 +86,9 @@
 }
 
 .entry2 {
-  width: 250px;
-  height: 30px;
+  width: 230px;
+
+  margin-bottom: 10px;
   overflow: hidden;
   
 }.entry3 {
@@ -108,11 +110,23 @@
   margin-bottom: 1px;
   
 }
-.block {
+.block1 {
   display: flex;
   flex-wrap: wrap;
-  background-color: #111134;
-  padding: 30px;
+  padding-top: 40px;
+  padding-left: 40px;
+}
+.block2 {
+  display: flex;
+  flex-wrap: wrap;
+  padding-left: 40px;
+}
+.individual {
+  width: 240px;
+  height: 350px;
+  padding: 20px;
+  margin-right: 40px;
+  background-color:forestgreen
 }
 button {
   margin-left: 50px;
